45.beta
=======
- Newly designed print dialog
- Added sandboxing for SVG rendering by using glycin
- Use RaisedBorder for HeaderBar to avoid shadow over images
- Fix browsing images on SMB shares not working
- Fix touchscreen gestures not working when zoomed in
- Fix touchscreen swipe only working on second attempt
- Added JpegXL support via new glycin version
- Added overshoot for swipe gesture
- New custom style for drop targets
- Changed name to Image Viewer

45.alpha
=======
- Add help
- Disable trashing for non-native files
- Give toast for latest deleted file priority over the others
- Only list supported image formats in file chooser
- Do not guess a potentially different background color for opaque images
- Fix incorrect updates when deleting or changing images
- Fix SVG zooming with high-res scroll-wheels
- Use glycin for sandboxed extendable image loading expect for SVG
- Remove backspace as a trash shortcut
- Change command line to open all given images in one window
- Do not show "Set as Background" if operation was aborted
- Let the user select multiple files to open in file chooser
- Support forward and back mouse buttons
- Correctly align right-click menu

44.3
=======
- Hide cursor together with controls when fullscreened
- Remove ctrl+x shortcut for deleting images
- Fix 'delete' action appearing too long in help overlay
- Split rotate actions making it possible to use them in help overlay
- Cancel GFile loading when decoder is dropped
- Make crossfade from spinner page to image work
- Don't make activatable row subtitles selectable in properties view
- Disable "open folder" action for non-native files (GTK doesn't support it)
- Leave fullscreen when status page is shown
- Skip unsupported formats when sliding through images
- Show window after 2 seconds if dimension are not yet known
- Cancel scroll deceleration on gesture use
- Hide headerbar on idle in fullscreen
- Show controls on mouse click