@@ -1,5 +1,5 @@
 project('loupe', 'rust',
-          version: '45.beta',
+          version: '45.beta.1',
     meson_version: '>= 0.59.0',
   default_options: [ 'warning_level=2',
                    ],
